Refactor: AccessToken을 서버에 저장하지 않도록 수정